<?xml version="1.0"?>
<package>
    <name>ss_pybullet</name>
    <version>0.0.0</version>
    <description>
     Pybullet Infrastructure
    </description>
    <!--Add in repo once its set up-->
    <url type="repository">https://github.com/rachelholladay/ss-pybullet/</url>
    <maintainer email="caelan@mit.edu">Caelan Reed Garrett</maintainer>
    <author email="caelan@mit.edu">Caelan Reed Garrett</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>python</build_depend>
    <run_depend>crg_planners</run_depend>
    <run_depend>python</run_depend>
    <run_depend>python-numpy</run_depend>
</package>
